# ultra-lean-mcp-proxy

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SPEC.md  pyproject.toml
.github/workflows/: publish-npm.yml  publish-pypi.yml  test.yml
docs/: MCP_ADOPTION_2026.md  MIGRATION.md  ultra-lean-mcp-proxy-usage-guide.md  ultra-lean-mcp-proxy-v2-api.md  ultra-lean-mcp-proxy-v2-architecture.md  ultra-lean-mcp-proxy-v2-plan.md
npm/: package.json
npm/src/: compress.mjs  config.mjs  delta.mjs  installer.mjs  proxy.mjs  result-compression.mjs  state.mjs  tools-hash-sync.mjs  watcher.mjs
npm/test/: config.test.mjs  delta.test.mjs  installer.test.mjs  proxy.test.mjs  result-compression.test.mjs  state.test.mjs  tools-hash-sync.test.mjs
registry/: clients.json
src/ultra_lean_mcp_proxy/: __init__.py  cli.py  compress.py  config.py  delta.py  installer.py  proxy.py  result_compression.py  state.py  tools_hash_sync.py  watcher.py
tests/: __init__.py  test_installer.py  test_v2_config.py  test_v2_delta.py  test_v2_lazy_catalog.py  test_v2_result_compression.py  test_v2_state.py  test_v2_tools_hash_sync.py
tests/fixtures/: brave-search.json  fetch.json  filesystem.json  github.json  memory.json  postgres.json  slack.json  v2_tools_list_sample.json
