[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ultra-lean-mcp-proxy"
version = "0.3.2"
description = "Ultra Lean MCP Proxy - lightweight optimization proxy for MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Lean Agent Protocol" }]
keywords = ["mcp", "proxy", "optimization", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lean-agent-protocol/ultra-lean-mcp-proxy"
Repository = "https://github.com/lean-agent-protocol/ultra-lean-mcp-proxy"
Issues = "https://github.com/lean-agent-protocol/ultra-lean-mcp-proxy/issues"

[project.optional-dependencies]
dev = ["pytest", "tiktoken"]
proxy = ["mcp"]

[project.scripts]
ultra-lean-mcp-proxy = "ultra_lean_mcp_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ultra_lean_mcp_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
